--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           burning desire <br />and my everlasting urge to be with you for every
           second of my existence.
         </p>
-        <img src="/bg4.jpg" width="350px" height="350px" />
+        <img src="bg4.jpg" width="350px" height="350px" />
       </section>
 
       <section class="poem">
